--- a/components/table-filter.component.html
+++ b/components/table-filter.component.html
@@ -2,12 +2,20 @@
   ._component_ {
     background: #ddd;
     margin: 0;
-    padding: 10px;
+    padding: 5px;
     border-radius: 4px;
+    border-bottom: 1px solid #ccc;
   }
 
-  ._component_ > *+* {
-    margin-left: 10px;
+  ._component_ > * {
+    display: inline-flex;
+    margin: 5px;
+    line-height: 20px;
+  }
+
+  ._component_ > * > span:nth-child(1) {
+    margin-right: 5px;
+    flex-shrink: 0;
   }
 
   ._component_ .filterItem {
@@ -31,7 +39,7 @@
   }
 </style>
 <label>
-  Sort by
+  <span>Sort by</span>
   <span 
     data-bind="value=_component_.sortField"
     data-component="selector"
@@ -43,7 +51,7 @@
   </span>
 </label>
 <label>
-  Levels
+  <span>Levels</span>
   <span 
     data-min="0" 
     data-max="9" 
@@ -53,15 +61,21 @@
   ></span>
 </label>
 <label class="stretchy">
-  Classes
-  <span 
-    class="filterItem" 
-    data-list="casting-classes" 
-    data-bind="class(active)=.show;text=.name"
-    data-event="click:_component_.toggleShow"
-  ></span>
+  <span>Classes</span>
+  <div>
+    <span 
+      class="filterItem" 
+      data-list="casting-classes" 
+      data-bind="class(active)=.show;text=.name"
+      data-event="click:_component_.toggleShow"
+    ></span>
+  </div>
 </label>
-<span class="count" data-bind="text=spells-filtered.length"></span>
+<span 
+  title="filtered spell count"
+  class="count" 
+  data-bind="text=spells-filtered.length"
+></span>
 <script>
   b8r.component('./range');
   b8r.component('https://rawgit.com/tonioloewald/bindinator.js/master/components/selector');
