--- a/components/table-filter.component.html
+++ b/components/table-filter.component.html
@@ -65,9 +65,9 @@
   <div>
     <span 
       class="filterItem" 
-      data-list="casting-classes" 
+      data-list="casting-classes"
       data-bind="class(active)=.show;text=.name"
-      data-event="click:_component_.toggleShow"
+      data-event="mouseup:_component_.toggleShow"
     ></span>
   </div>
 </label>
