Correctly labelled "School"

--- a/components/table.component.html
+++ b/components/table.component.html
@@ -115,7 +115,7 @@
       <span class="detail field" title="Classes">
         <span class="character-class" data-list=".classes" data-bind="text=.name"></span>
       </span>
-      <span class="field" title="Name" data-bind="text=.school.name"></span>
+      <span class="field" title="School" data-bind="text=.school.name"></span>
       <span class="field" title="Casting Time" data-bind="text=.casting_time"></span>
       <span class="field" title="Duration" data-bind="text=.duration"></span>
       <span class="field" title="Components" data-bind="text=.components"></span>
