better dark mode support

--- a/components/range.component.html
+++ b/components/range.component.html
@@ -23,7 +23,7 @@
   }
 
   ._component_ .range-value.selected {
-    background: royalblue;
+    background: var(--accent-color);
   }
 </style>
 <span 
