--- a/components/table-filter.component.html
+++ b/components/table-filter.component.html
@@ -1,10 +1,10 @@
 <style>
   ._component_ {
-    background: #ddd;
+    background: var(--black-20);
     margin: 0;
     padding: 5px;
     border-radius: 4px;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid var(--black-20);
     flex-shrink: 0;
   }
 
@@ -20,7 +20,7 @@
   }
 
   ._component_ .filterItem {
-    background: #aaa;
+    background: var(--black-40);
     color: white;
     padding: 2px 8px;
     border-radius: 99px;
@@ -32,7 +32,7 @@
   }
 
   ._component_ .filterItem.active {
-    background: royalblue;
+    background: var(--accent-color);
   }
 
   ._component_ .count {
