--- a/components/table.component.html
+++ b/components/table.component.html
@@ -22,7 +22,7 @@
   }
 
   ._component_ .spell {
-    background: white;
+    background: var(--content-bg-color);
     padding: 2px 10px;
     margin-bottom: 10px;
     border-radius: 4px;
@@ -50,7 +50,7 @@
     line-height: 24px;
     font-size: 14px;
     color: white;
-    background-color: royalblue;
+    background-color: var(--accent-color);
     text-align: center;
     border-radius: 99px;
     font-weight: bold;
